samples/_failures_safe/1761436070_a309b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bfa7311.c: In function ‘main’:
./samples/SAFE/__tmp_5bfa7311.c:137:13: error: expected declaration or statement at end of input
  137 |             return EXIT_FAILURE;
      |             ^~~~~~
./samples/SAFE/__tmp_5bfa7311.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5bfa7311.c:137:13: error: expected declaration or statement at end of input
